# Brain_Analizer

./: README.md
MEB/: .classpath  .cproject  .project  CMakeCache.txt  CMakeLists.txt  Doxyfile.in  Makefile  README.md  cmake_install.cmake  start_brain.sh
MEB/output/: Doxyfile  Makefile  cmake_install.cmake
MEB/output/alive_supervision/: Makefile  cmake_install.cmake
MEB/output/configuration/: Makefile  cmake_install.cmake
MEB/output/counter_manager/: Makefile  cmake_install.cmake
MEB/output/mocks/: Makefile  cmake_install.cmake
MEB/output/notification_handler/: Makefile  cmake_install.cmake
MEB/output/persistent_memory/: Makefile  cmake_install.cmake
MEB/output/sensor_data/: Makefile  cmake_install.cmake
MEB/output/shutdown_and_enabler/: Makefile  cmake_install.cmake
MEB/output/thread_handler/: Makefile  cmake_install.cmake
MEB/output/utils/: Makefile  cmake_install.cmake
MEB/output/version/: Makefile  cmake_install.cmake
MEB/pluget/: AraComBindingGenerator.pluget  AraComManifestGenerator.pluget  AraDmDiagApiCodeGenerator.pluget  AraDmDiagApiModelGenerator.pluget  AraDmExtensionGenerator.pluget  AraDmManifestGenerator.pluget  araComJavaBindingGenValidators.araexec  araPmPhmEmManifestGen.pluget  araUcmManifestGen.pluget
brain/: CMakeLists.txt  README.md  include_paths.cmake  main.cpp
brain/app/: CMakeLists.txt  logUtility.hpp  main.cpp
brain/brain_app/: BrainApp.cpp  BrainApp.hpp  CMakeLists.txt
brain/canPdu/: CMakeLists.txt  CanPDU.cpp  CanPDU.hpp  CanPduData.hpp  CanPduParser.cpp  CanPduParser.hpp  CanPduState.cpp  CanPduState.hpp
brain/communicator/: CMakeLists.txt  Communicator.cpp  Communicator.hpp  CommunicatorManagerBase.cpp  CommunicatorManagerBase.hpp
brain/communicator/CanCommunicator/: CMakeLists.txt  CanCommunicator.cpp  CanCommunicator.hpp
brain/communicator/FileSystemCommunicator/: CMakeLists.txt  FileAction.hpp  FileSystemCommunicator.cpp  FileSystemCommunicator.hpp  FolderMonitor.cpp  FolderMonitor.hpp  MockSensorFactory.cpp  MockSensorFactory.hpp  SensorGenerator.cpp  SensorGenerator.hpp
brain/communicator/PPE/: CMakeLists.txt  CommunicatorManager.cpp  CommunicatorManager.hpp
brain/communicator/SSP/: CMakeLists.txt  CommunicatorManager.cpp  CommunicatorManager.hpp
brain/communicator/diagdata/: CMakeLists.txt  DiagDataCommunicator.cpp  DiagDataCommunicator.hpp
brain/communicator/ids_portal/: CMakeLists.txt
brain/communicator/legacySomeip/: CMakeLists.txt  IdsEthCommunicator.cpp  IdsEthCommunicator.hpp  IdsImmobilizerCommunicator.cpp  IdsImmobilizerCommunicator.hpp  IdsIpSecurityCommunicator.cpp  IdsIpSecurityCommunicator.hpp  IdsProxyRelayCommunicator.cpp  IdsProxyRelayCommunicator.hpp  IdsSecurityEventCommunicator.cpp  IdsSecurityEventCommunicator.hpp  legacySomeIPCommunicator.hpp
brain/communicator/periodic/: CMakeLists.txt  PeriodicReportCommunicator.cpp  PeriodicReportCommunicator.hpp
brain/communicator/sci/: CMakeLists.txt  SciCommunicator.cpp  SciCommunicator.hpp  SciSignalGroupHandler.cpp  SciSignalGroupHandler.hpp
brain/communicator/someip/: CMakeLists.txt  GSDPCommunicator.cpp  GSDPCommunicator.hpp  SecurityEventNormal.cpp  SecurityEventNormal.hpp  SecurityEventSmall.cpp  SecurityEventSmall.hpp  SomeIPCommunicator.hpp
brain/communicator/uds/: CMakeLists.txt  SocketCommunicator.cpp  SocketCommunicator.hpp  UDSCommunicator.cpp  UDSCommunicator.hpp
brain/config/: AlertEventsNames.cpp  AlertEventsNames.hpp  BrainConfigConstants.hpp  CMakeLists.txt
brain/diagnostics/: CMakeLists.txt
brain/diagnostics/PPE/: AdaptationValuesConstants.hpp  CMakeLists.txt  DiagnosticsManager.cpp  DiagnosticsManager.hpp
brain/diagnostics/SSP/: CMakeLists.txt  DiagnosticsManager.cpp  DiagnosticsManager.hpp
brain/diagnostics/diag_accessor/: CMakeLists.txt  DiagFeatureFlags.cpp  DiagFeatureFlags.hpp
brain/diagnostics/dtc/: CMakeLists.txt  DtcEvent.cpp  DtcEvent.hpp  DtcServiceDiscoveryEvent.cpp  DtcServiceDiscoveryEvent.hpp  DtcServiceRegistryEvent.cpp  DtcServiceRegistryEvent.hpp  DtcTimedEvent.cpp  DtcTimedEvent.hpp
brain/diagnostics/interface/: DiagnosticsManagerInterface.hpp
brain/diagnostics/measurement_values/: CMakeLists.txt  CounterMeasurementValue.cpp  CounterMeasurementValue.hpp  DiagMeasurementValuesManager.cpp  DiagMeasurementValuesManager.hpp  IntrusionDetectionSystemErrorCounterPublisher.cpp  IntrusionDetectionSystemErrorCounterPublisher.hpp  IntrusionDetectionSystemWarningCounterPublisher.cpp  IntrusionDetectionSystemWarningCounterPublisher.hpp
brain/diagnostics/routines/: CMakeLists.txt  IDSResetLifeCycleRoutine.cpp  IDSResetLifeCycleRoutine.hpp
brain/engines/: CMakeLists.txt  CriticalAlertFilter.cpp  CriticalAlertFilter.hpp  Engine.hpp  EngineEventSender.cpp  EngineEventSender.hpp  EngineId.hpp  EthernetStatistics.cpp  EthernetStatistics.hpp  NullEngine.cpp  NullEngine.hpp
brain/engines/MEB/: CMakeLists.txt  EngineDispatcher.cpp  EngineDispatcher.hpp  PeriodicStatisticsEngine.cpp  PeriodicStatisticsEngine.hpp
brain/engines/PPE/: CMakeLists.txt  EngineDispatcher.cpp  EngineDispatcher.hpp  PeriodicStatisticsEngine.cpp  PeriodicStatisticsEngine.hpp
brain/engines/SSP/: CMakeLists.txt  (+4 more)
brain/events/: CMakeLists.txt  Event.cpp  Event.hpp  EventPriority.hpp  EventUtils.cpp  EventUtils.hpp
brain/histograms/: CMakeLists.txt  RateHistogram.cpp  RateHistogram.hpp  ScalarHistogram.cpp  ScalarHistogram.hpp
brain/internal_player/: CMakeLists.txt  InternalPlayer.cpp  InternalPlayer.hpp
brain/main/: linked_libs.cmake  main.cpp
brain/messageRepository/: CMakeLists.txt  MessageRepositoryPriorityQueue.cpp  MessageRepositoryPriorityQueue.hpp
brain/noise_filter/: CMakeLists.txt  NoiseFilter.cpp  NoiseFilter.hpp
brain/sender/: BELogicSM.cpp  BELogicSM.hpp  BELogicStates.cpp  BELogicStates.hpp  CMakeLists.txt  Creditor.cpp  Creditor.hpp  EventsStorage.cpp  EventsStorage.hpp  SenderManager.cpp  SenderManager.hpp
brain/sensor_data/: CMakeLists.txt
brain/utils/: CMakeLists.txt  CounterWithTs.cpp  CounterWithTs.hpp  IpUtils.cpp  IpUtils.hpp  TestsAdapters.hpp  UtilsConstants.hpp
(+399 files in other folders)
